--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Header and Footer Example</title>
-</head>
-<body style="margin: 0; padding: 0;">
-  <header style="background-color: #FF0000; height: 70px; width: 100%;">
-    </header>
-  <p>This is the main content of the webpage. You can add your desired content here.</p>
-  <footer style="background-color: #00FF00; height: 60px; width: 100%; display: flex; justify-content: center; align-items: center;">
-    <p style="text-align: center;">Best School</p>
-  </footer>
-</body>
+<html lang="en">
+	<head>
+		<title>AirBnB clone</title>
+		<style>
+
+			body {margin:0px;padding:0px;}
+			header {background-color:#FF0000;height:70px;width:100%;}
+			footer {position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;}
+
+		</style>
+	</head>
+    <body>
+		<header>
+		</header>
+
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
